###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "driving", version = "0.0.1")

# Hedron's Compile Commands Extractor for Bazel
archive_override(
    module_name = "hedron_compile_commands",
    urls = [
        "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/4f28899228fb3ad0126897876f147ca15026151e.tar.gz",
    ],
    strip_prefix = "bazel-compile-commands-extractor-4f28899228fb3ad0126897876f147ca15026151e",
)

git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest",
    commit = "1b18723e874b256c1e39378c6774a90701d70f7a",
    patches = ["//:minimal_googletest_MODULE.bazel"],
    patch_args = ["-p0", "-d", ".", "--output", "MODULE.bazel"],
)