# MODULE.bazel file for Bazel projects
# This file is used to define dependencies and configurations for Bazel projects.
module(
    name = "",
    version = "0.0.1",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest",
    commit = "1b18723e874b256c1e39378c6774a90701d70f7a",
    patches = ["//:minimal_googletest_MODULE.bazel"],
    patch_args = ["-p0", "-d", ".", "--output", "MODULE.bazel"],
)