cc_library(
    name = "a_star",
    srcs = ["a_star.cc"],
    hdrs = ["a_star.h"],
    deps = [
        "//common/algorithm/solver:solver",
        "//common/math:vec",
        "@glog//:glog",  # glog dependency
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "solver",
    hdrs = ["solver.h"],
    visibility = ["//visibility:public"],
)
