cc_library(
    name = "a_star",
    srcs = ["a_star.cc"],
    hdrs = ["a_star.h"],
    deps = [
        "//common/algorithm/solver:solver",
        "//common/math:vec",
        "//common/proto:grid_search_cc_proto",
        "@glog//:glog",  # glog dependency
        "@gflags//:gflags",  # gflags dependency
        "//common:flags",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "solver",
    hdrs = ["solver.h"],
    visibility = ["//visibility:public"],
)
